# game-power-hammer

./: README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
app/: app.config.ts
app/components/Site/: Navbar.vue
app/layouts/: home.vue
app/modules/: tauri.ts
app/pages/: test.vue  webview.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
