[package]
name = "nuxtor"
version = "1.3.1"
description = "Starter template for Nuxt 3 and Tauri 2"
authors = [ "NicolaSpadari" ]
license = "MIT"
repository = "https://github.com/NicolaSpadari/nuxtor"
edition = "2021"

[lib]
name = "nuxtor_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.2.0"
features = [ ]

[dependencies]
tauri-plugin-notification = "2.2.2"
tauri-plugin-single-instance = { version = "2.2", features = ["deep-link"] }
tauri-plugin-store = "2.2.0"
serde_json = "1"
tauri-plugin-deep-link = "2"

[dependencies.tauri]
version = "2.5.1"
features = [
  "tray-icon",
  "unstable"
]

[dependencies.serde]
version = "1"
features = [ "derive" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
